# datasim

./: .coveragerc  .gitignore  README.md  bed.py  ci-checks.py  datasim.py  environment.yml  header  icu.py  main.py  patient.py  pyproject.toml  pyrightconfig.json  requirements.txt  sim_main.py
.github/workflows/: docs-pages.yml  ghworkflow-python.yml  python-conda-pyright-pytest.yml
datasim/: __init__.py  constant.py  dashboard.py  dataset.py  entity.py  generator.py  logging.py  output.py  plot.py  quantity.py  queue.py  resource.py  runner.py  simtime.py  simulation.py  state.py  streamlit_dashboard.py  streamlit_update.py  types.py  world.py
datasim/tests/: test_world.py
docs/source/: conf.py  index.rst
examples/icu/: ICU - ICU - experiment 13102025.csv  ICU - ICU - experiment Joost.csv  ICU - Patient_Timing - experiment 13102025.csv  icu.py  icu.yaml  patient.py  simulatiedata.csv
examples/icu/Voorbeelden/: ICU - ICU - synth.csv  ICU - Patient_Timing - synth.csv  icu_les1.yaml  icu_les2.yaml  icu_les4.yaml
icu/: bed.py  icu.py  patient.py
output/: ICU - beds.slots=10, critical_duration:B=300, critical_duration:C=150.csv  ICU - beds.slots=10, critical_duration:B=300, critical_duration:C=150.pickle  ICU - beds.slots=4, critical_duration:B=400, critical_duration:C=200.pickle
sample-icu/: icu.py  patient.py  simulatiedata.csv
tests/: test_entity.py  test_plot.py  test_world.py
